# ublue-cosmic-setup

./: Cargo.toml
src/: cli.rs  errors.rs  logic.rs  main.rs
src/tests/: tests.rs
